# AI-Agents

./: .gitignore  README.md
Intro-agents/: multi-agent-system.md  tools.md  vision-browser-agents.md
Langgraph/: doc.md
Langgraph/Document-analysis-workflow/: agent_workflow.ipynb
Langgraph/Email-processing_system/: .env.example  README.md  sources.txt  workflow.ipynb
Langgraph/Mail_sorting_agent/: README.md  UI_PLAN.md  agent_core.py  app.py  main.py  pyproject.toml  requirements.txt  tools.py
Langgraph/Mail_sorting_agent/docs/: learning.md
LlamaIndex/: agents.ipynb  components.ipynb  doc.md  workflows.ipynb
docs/: intro-to-agents.md  retrievel-agents.md  sources.md
