[project]
name = "mail-sorting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit==2.11.0",
    "google-api-python-client==2.198.0",
    "google-auth==2.55.1",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "httplib2==0.32.0",
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-groq==1.1.3",
    "langfuse==4.13.0",
    "langgraph==1.2.7",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]
